# reseau_de_neurones

./: pyproject.toml
docs/: .buildinfo  CNAME  conf.py  genindex.html  index.rst  py-modindex.html  searchindex.js  src.datas.html  src.graphic.html  src.initialisation.html  src.nn.html  src.optimisation.html  src.tenseurs.html
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.datas.doctree  src.doctree  src.graphic.doctree  src.layers.doctree  src.optimisation.doctree  src.tenseurs.doctree  src.training.doctree
docs/_build/html/: .buildinfo  index.html  (+6 more)
docs/_modules/: index.html
docs/_sources/: src.exemples.rst.txt  src.rst.txt
docs/_static/: documentation_options.js
pages/: objects.inv  search.html
pages/_sources/: src.tenseurs.rst.txt
sphinx/: conf.py  src.datas.rst  src.graphic.rst  src.layers.rst  src.optimisation.rst
src/: __init__.py
src/datas/: __init__.py  datas.py
src/exemples/: __init__.py  exemple_boston.py  exemple_iris.py  exemple_titanic.py  test.py
src/graphic/: __init__.py  animation.py  graphic.py  simple_graphic.py
src/initialisation/: __init__.py  aleatoire.py  he_init.py  initialisation.py  zeros.py
src/layers/: __init__.py  activation.py  layer.py  lineaire.py  reluactivation.py  sigactivation.py  tanhactivation.py
src/lossfunction/: __init__.py  hinge_loss.py  logisticloss.py  loss.py  mae.py  mse.py
src/nn/: __init__.py  neuralnet.py
src/optimisation/: __init__.py  optimize.py  sgd.py
src/tenseurs/: __init__.py
src/training/: __init__.py  training.py
tests/: test_reseau.py
(+91 files in other folders)
