[tool.poetry]
name = "reseau_de_neurones"
version = "0.1.0"
description = "Conception d'un réseau de neurones"
authors = ["Oumar Kane <oumar.kane@univ-thies.sn>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.5.0"
black = "^22.3.0"
numpy = "^1.22.3"
mypy = "^0.942"
tqdm = "^4.64.0"
sklearn = "^0.0"
pandas = "^1.4.2"
pyment = "^0.3.3"
pylint = "^2.13.5"
sphinx-rtd-theme = "^1.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
